themes: Prevent image tab close button from overflowing...
...the tab itself. Noted by @user062. This adds a right margin to the
close button on the image tabs so that the tab size is pushed out
to fit the button.

--- a/themes/Default/common.css
+++ b/themes/Default/common.css
@@ -145,6 +145,12 @@ notebook header tabs tab:hover {
   background-color: @hover-color;
 }
 
+/* Add margin to image tabs so the close button fits */
+notebook header tabs tab > box > button
+{
+  margin-right: 5px;
+}
+
 /* The background of many dialogs, e.g. Preferences and gimpcolordialog */
 .vertical {
   color: @fg-color;
